Added KeyboardInput.cs TODO: extend it to GameScene

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -93,6 +93,7 @@
     <Compile Include="BMFont\FontLoader.cs" />
     <Compile Include="BMFont\FontPage.cs" />
     <Compile Include="BMFont\FontRenderer.cs" />
+    <Compile Include="KeyboardInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
