--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -96,9 +96,11 @@
     <Compile Include="Settings.cs" />
     <Compile Include="MouseEventsHandler.cs" />
     <Compile Include="BMFont\Character.cs" />
-    <Compile Include="TextBox.cs" />
-    <Compile Include="Button.cs" />
     <Compile Include="PathManager.cs" />
+    <Compile Include="UIElements\UIButton.cs" />
+    <Compile Include="UIElements\UIElement.cs" />
+    <Compile Include="UIElements\UITextBox.cs" />
+    <Compile Include="Scenes\PreLoaderScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -145,5 +147,6 @@
     <Folder Include="NPC\" />
     <Folder Include="Objects\" />
     <Folder Include="Quests\" />
+    <Folder Include="UIElements\" />
   </ItemGroup>
 </Project>
